--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Portfolio</title>
-  <base href="/">
+  <!-- This <base>-Tag is used for deployment -->l
+  <base href="https://steffen-schanze.de/"> 
+  <!-- This <base>-Tag is used for development -->l
+  <!-- <base href="/">  -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -12,3 +15,4 @@
   <app-root></app-root>
 </body>
 </html>
+
