crm deleted from portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <!-- This <base>-Tag is used for deployment -->l
   <base href="https://steffen-schanze.de/"> 
   <!-- This <base>-Tag is used for development -->l
-  <!-- <base href="/">  -->
+  <base href="/"> 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
